npm run build and fixed the two icons that was overlapping

--- a/src/Home.css
+++ b/src/Home.css
@@ -179,7 +179,7 @@ button {
   border: none;
   position: absolute;
   top: 0;
-  right: 4px;
+  right: 15px;
   border-radius: 35px;
   outline: none;
   background: none;
